feat: add capacity estimation learning module (#6)
